--- a/src/App.css
+++ b/src/App.css
@@ -63,32 +63,28 @@ body {
 .link_section {
   margin: 40px auto;
   max-width: 1152px;
+  display: flex;
+  flex-direction: column;
+  place-content: center;
 }
 
-a {
-  text-decoration: none;
-}
-
-a .links {
+.link_section a {
   width: 100%;
   height: 76px;
+  text-decoration: none;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+  line-height: 20px;
   background: #eaecf0;
+  color: #000;
   margin: 15px auto;
   padding: 24px 32px;
   border-radius: 8px;
   box-sizing: border-box;
 }
 
-.links h2 {
-  margin: 5px auto;
-  text-align: center;
-  color: #000;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 20px;
-}
-
-.links:hover {
+.link_section a:hover {
   background: #d0d5dd;
   border: 1px solid #D0D5DD;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
