--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,7 @@ body {
 /* STYLES FOR LARGER SCREEN */
 
 @media screen and (min-width: 780px) {
-  .links h2 {
+  .link_section a{
     font-size: 18px;
   }
 
