--- a/src/components/Form/form.css
+++ b/src/components/Form/form.css
@@ -113,3 +113,20 @@ button:hover {
   border: 1px solid 175cd3;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
 }
+
+/* STYLES FOR WIDER SCREENS */
+@media screen and (min-width: 720px) {
+  .fn,
+  .ln {
+    width: 50%;
+    display: inline-flex;
+  }
+
+  .ln #form_input {
+    margin-left: 10px;
+  }
+
+  .fn #form_input {
+    margin-right: 10px;
+  }
+}
